package com.hms.observer;

import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.context.event.EventListener;
import org.springframework.stereotype.Component;

@Component
public class BillingNotifier {

    private static final Logger log = LoggerFactory.getLogger(BillingNotifier.class);

    @EventListener
    public void onPatientAdmitted(PatientAdmittedEvent event) {
        log.info("NOTIFYING BILLING: Prepare invoice for patient {} {}",
                event.getPatient().getFirstName(), event.getPatient().getLastName());
    }
}
